[package]
name = "video2cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.9"
opencv = "0.64"
crossterm = "0.23"
tui = "0.18.0"
tokio = { version = "1.19.2", features = ["full"]}
ws = "0.9"
env_logger = "0.7"
lazy_static = "1"